@@ -186,6 +186,53 @@ exports[`AccountFees renders discounted fee without volume limit 1`] = `
 </div>
 `;
 
+exports[`AccountFees renders discounted non-USD base fee 1`] = `
+<div>
+  <p>
+    <s>
+      1.4% + £0.20 per transaction
+    </s>
+     0.7% + £0.10 per transaction
+  </p>
+  <div
+    class="progressbar"
+  >
+    <div
+      class="progressbar__container"
+    >
+      <div
+        class="progressbar__inner"
+        style="width: 1.234556%;"
+      />
+      <span
+        class="progressbar__outer-progress-label"
+      >
+        $12,345.56
+      </span>
+    </div>
+    <span
+      class="progressbar__total-label"
+    >
+      $1,000,000.00
+    </span>
+  </div>
+  <p
+    class="description"
+  >
+    Discounted base fee expires after the first $1,000,000.00 of total payment volume.
+  </p>
+  <p>
+    <a
+      href="https://woocommerce.com/terms-conditions/woocommerce-payments-promotion/"
+      rel="noopener noreferrer"
+      target="_blank"
+    >
+      Learn more
+    </a>
+  </p>
+</div>
+`;
+
 exports[`AccountFees renders first discounted fee ignoring the rest 1`] = `
 <div>
   <p>
@@ -197,6 +244,23 @@ exports[`AccountFees renders first discounted fee ignoring the rest 1`] = `
   <p>
     <a
       href="https://woocommerce.com/terms-conditions/woocommerce-payments-promotion/"
+      rel="noopener noreferrer"
+      target="_blank"
+    >
+      Learn more
+    </a>
+  </p>
+</div>
+`;
+
+exports[`AccountFees renders non-USD base fee 1`] = `
+<div>
+  <p>
+    2.9% + €0,25 per transaction
+  </p>
+  <p>
+    <a
+      href="https://docs.woocommerce.com/document/payments/faq/fees/"
       rel="noopener noreferrer"
       target="_blank"
     >
