@@ -5,6 +5,7 @@
 * Update - Define constant for the group to be used for scheduled actions.
 * Update - Enable multiple customer currencies support in live mode.
 * Add - Rate limit failed account connection checks.
+* Add - Support displaying non-USD base fees on settings page.
 
 = 2.0.0 - 2021-02-22 =
 * Update - Render customer details in transactions list as text instead of link if order missing.
